<resources>
    <string name="app_name">WeatherInfo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="Value">50 °</string>
    <string name="place">Place</string>
    <string name="ID">45c4828718e523c5af2bbc89b53fb615</string>
    <string name="Link">http://api.openweathermap.org/data/2.5/forecast/daily?q=[CITY]&amp;cnt=[DAYS]&amp;appid=45c4828718e523c5af2bbc89b53fb615&amp;units=metric</string>
    <string name="pref_title_cities">Name of a city</string>
    <string name="current_weather_forecast">Current weather forecast</string>
    <string name="weekly_weather_forecast">Weekly weather forecast</string>
    <string name="programming_assignment">Programming Assignment</string>
    <string name="elbez_hammouda">ELBEZ Hammouda</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="about">About</string>
</resources>
