<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="weatherinfo.timo.com.weatherinfo.MainActivity">

    <RelativeLayout
        android:id="@+id/loadingP"
        android:layout_width="0dp"
        android:layout_height="587dp"
        android:layout_marginRight="0dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="80dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints"
        android:id="@+id/Main">

        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/place"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:layout_weight="50"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center"
                android:text="@string/Value"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="100sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/tomorrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tomorrow"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <ImageView
                android:id="@+id/ticon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:layout_weight="50"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/ttemperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center"
                android:text="@string/Value"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="50sp" />
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
